fix/marsGalaxy spacing

--- a/styles/MarsGalaxy.module.css
+++ b/styles/MarsGalaxy.module.css
@@ -4,7 +4,7 @@
 .centerize {
   animation: fadeInOnLoad ease 2.5s;
   position: absolute;
-  margin-top: 3%;
+  margin-top: 10%;
 }
   
 .planet {
